--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body></body>
+<head>
+    <title>Kitten Web</title>
+</head>
+<body>
+    <h1><a>Inicio</a></h1>
+    <ul>
+        <li><a>Pagina 1</a></li>
+        <li><a>Pagina 2</a></li>
+        <li><a>Pagina 3</a></li>
+    </ul>
+</body>
 
     
 
