--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kitten Web</title>
+    <title>CSS</title>
+    <link href="main.css" type="text/css" />
 </head>
 <body>
-    <h1><a>Inicio</a></h1>
-    <ul>
-        <li><a>Pagina 1</a></li>
-        <li><a>Pagina 2</a></li>
-        <li><a>Pagina 3</a></li>
-    </ul>
+<p>Esto es un parrafo de prueba</p>
+<span>Esto es un span</span>
 </body>
 
     
